get queries from url

--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    Static File !
+    <h2>Static File !</h2>
   </body>
 </html>
