--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Weather App</title>
     <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
+
+    <!-- jQuery library -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <!-- Popper JS -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+    <!-- Latest compiled JavaScript -->
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
   </head>
   <body>
-    <h2>Static File !</h2>
+    <div class="container">
+      <h2 class="mb-5">Weather App</h2>
+      <form class="form-inline">
+        <input
+          class="form-control mr-sm-2"
+          type="text"
+          placeholder="Search location"
+        />
+        <button class="btn btn-success" id="button" type="submit">
+          Search
+        </button>
+      </form>
+    </div>
     <script src="./main.js"></script>
   </body>
 </html>
