get value from user and check

--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,8 @@
           Search
         </button>
       </form>
+      <p id="error"></p>
+      <div id="info" class="info"></div>
     </div>
     <script src="./main.js"></script>
   </body>
