display expected information to user

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,12 @@
         </button>
       </form>
       <p id="error"></p>
-      <div id="info" class="info"></div>
+      <div id="info" class="info">
+        <p id="address"></p>
+        <p id="temperature"></p>
+        <p id="description"></p>
+        <p id="time"></p>
+      </div>
     </div>
     <script src="./main.js"></script>
   </body>
